crates/arity-formatter/tests/snapshots/formatter__roxygen_bail_linkref_def_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @details
#' See [foo] and [bar].
#'
#' [foo]: https://example.com/foo
#' [bar]: https://example.com/bar
#' @md
#' @name foo
NULL
