crates/arity-formatter/tests/snapshots/formatter__roxygen_bail_list_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Steps:
#' - first item that is reasonably long but must not be reflowed
#' - second item that likewise stays exactly on its own source line
f <- function(x) x
