crates/arity-formatter/tests/snapshots/formatter__roxygen_bail_rd_comment_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' Some prose with a % hidden comment
#' and a second line here.
#' @name foo
NULL
