crates/arity-formatter/tests/snapshots/formatter__roxygen_block_passthrough_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Title
#'
#' @param x A number.
#' @examples
#' f(1)
#' @export
f <- function(x) x
