crates/arity-formatter/tests/snapshots/formatter__roxygen_comment_gap_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
#' A title that is long enough to wrap onto a second line when formatted by
#' arity despite an intervening ordinary comment.
# ordinary comment
#' @param x A value.
#' @return The value.
#' @export
f <- function(x) x
