crates/arity-formatter/tests/snapshots/formatter__roxygen_examples_dontrun_passthrough_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @examples
#' \dontrun{
#' run_thing()
#' }
f <- function() NULL
