crates/arity-formatter/tests/snapshots/formatter__roxygen_examples_format_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @examples
#' a <- 1
#' f(x)
f <- function(x) x
