crates/arity-formatter/tests/snapshots/formatter__roxygen_examples_idempotent_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @examples
#' x <- 1
#' if (x > 0) {
#'   print(x)
#' }
f <- function() NULL
