crates/arity-formatter/tests/snapshots/formatter__roxygen_examples_multiline_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @examples
#' g <- function() {
#'   x <- 1
#'   x + 1
#' }
g <- function() NULL
