crates/arity-formatter/tests/snapshots/formatter__roxygen_examples_trailing_blank_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' Compose Euler Diagrams
#'
#' @examples
#' a <- 1
#'
#' @name eulergram-compose
NULL
