crates/arity-formatter/tests/snapshots/formatter__roxygen_examplesif_format_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
#' @examplesIf interactive()
#' run_thing(a, b)
f <- function() NULL
