crates/arity-formatter/tests/snapshots/formatter__roxygen_indented_in_block_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
f <- function() {
  #' inner doc
  #' @param y z
  g <- 1
}
